--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.5",
     "ts-node": "^10.9.2",
