--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "test": "jest",
     "dev": "node --loader ts-node/esm src/infrastructure/index.ts",
     "build": "tsc",
     "start": "node dist/infrastructure/index.js"
@@ -20,7 +21,10 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.13",
     "@types/node": "^22.7.5",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
